// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`L&A (logic and accuracy) flow 1`] = `
.c4 {
  font-size: 0.8em;
}

.c10 {
  white-space: nowrap;
}

.c3 {
  line-height: 1.2;
}

.c3 h1 {
  margin: 2em 0 1em;
  line-height: 1.1;
  font-size: 1.5em;
}

.c3 h2 {
  margin: 1.5em 0 0.75em;
  font-size: 1.25em;
}

.c3 h3 {
  font-size: 1.17em;
}

.c3 h4 {
  font-size: 1em;
}

.c3 h5 {
  font-size: 0.9em;
}

.c3 h3,
.c3 h4,
.c3 h5,
.c3 p,
.c3 ol,
.c3 ul,
.c3 hr {
  margin-top: 1em;
  margin-bottom: 1em;
}

.c3 h1 + h2 {
  margin-top: -0.75em;
}

.c3 h1 + p,
.c3 h2 + p,
.c3 h1 + ol,
.c3 h2 + ol,
.c3 h1 + ul,
.c3 h2 + ul {
  margin-top: -0.75em;
}

.c3 h3 + p,
.c3 h4 + p,
.c3 h5 + p,
.c3 h3 + ol,
.c3 h4 + ol,
.c3 h5 + ol,
.c3 h3 + ul,
.c3 h4 + ul,
.c3 h5 + ul {
  margin-top: -1em;
}

.c3 > :not(.ignore-prose):first-child {
  margin-top: 0;
}

.c3 > :not(.ignore-prose):last-child {
  margin-bottom: 0;
}

.c3 dl {
  margin: 1em 0;
}

.c3 hr {
  border: 0;
  border-top: 0.1em solid #666666;
}

.c7 {
  border-color: rgb(194,200,203);
  width: 100%;
  border-collapse: collapse;
  text-align: left;
}

.c7 th,
.c7 td {
  border-bottom: 1px solid rgb(194,200,203);
  padding: 0.25rem 0.5rem;
}

.c7 th {
  border-top: 1px solid rgb(194,200,203);
  font-size: 0.75rem;
}

.c8 {
  text-align: right;
}

.c9 {
  margin: 1rem 0;
  page-break-inside: avoid;
}

.c9 p:first-child {
  margin-bottom: 0;
}

.c9 h3 {
  margin-top: 0;
  margin-bottom: 0.5em;
}

.c9 h3 + p {
  margin-top: -0.8em;
  margin-bottom: 0.25em;
}

.c9 h3 + table {
  margin-top: -0.5em;
}

.c12 {
  margin: 1rem 0;
  color: #cccccc;
  page-break-inside: avoid;
}

.c12 p:first-child {
  margin-bottom: 0;
}

.c12 h3 {
  margin-top: 0;
  margin-bottom: 0.5em;
}

.c12 h3 + p {
  margin-top: -0.8em;
  margin-bottom: 0.25em;
}

.c12 h3 + table {
  margin-top: -0.5em;
}

.c11 {
  width: 100%;
  height: 1px;
  border-collapse: collapse;
}

.c11 tr {
  border-top: 1px solid rgb(194,200,203);
  border-bottom: 1px solid rgb(194,200,203);
  height: 100%;
}

.c11 tr.metadata {
  font-size: 0.75em;
}

.c11 tr.metadata.metadatarow {
  border-bottom: 1px solid #e6e6e6;
}

.c11 td {
  width: 1%;
  height: 100%;
  padding: 0.1rem 0.25rem;
  padding-right: 0;
  text-align: right;
  white-space: no-wrap;
}

.c11 th {
  padding: 0 0.5rem;
  text-align: right;
  font-weight: 400;
}

.c11 th:first-child {
  padding-left: 0.1rem;
  text-align: left;
}

.c11 th:not(:first-child) {
  padding-right: 0;
}

.c2 {
  float: right;
  margin: 0 0 1em 2em;
  height: 0.25in;
}

.c1 {
  page-break-before: always;
}

.c5 {
  -webkit-columns: 3;
  columns: 3;
  -webkit-column-gap: 0.3in;
  column-gap: 0.3in;
  margin-top: 1rem;
}

.c5 > div {
  margin-top: 0;
}

.c0 {
  font-size: 12px;
}

.c6 {
  margin-bottom: 1em;
  border: 1px solid rgb(194,200,203);
  border-width: 0 1px;
  -webkit-break-inside: avoid;
  break-inside: avoid;
}

.c6 h3 {
  margin: 0;
  background: rgb(194,200,203);
  padding: 0.25rem 0.5rem;
}

@media print {

}

@media print {

}

@media print {
  .c7 {
    border-top: 1px solid rgb(194,200,203);
  }
}

@media print {

}

@media (min-width:480px) {

}

@media print {

}

@media (min-width:480px) {

}

@media print {

}

@media print {
  .c0 {
    font-size: 12px;
  }
}

@media (min-width:1024px) {

}

@media (min-width:1440px) {

}

@media print {

}

@media print {

}

@media print {

}

<div>
  <div
    class="c0"
  >
    <section
      class="c1"
    >
      <img
        alt="VotingWorks logo"
        class="c2"
        src="/votingworks-wordmark-black.svg"
      />
      <div
        class="c3"
      >
        <h1>
          Test Deck
           Precinct Tally Report for:
           
          District 5
        </h1>
        <h2>
          Mock General Election Choctaw 2020
        </h2>
        <p>
          Wednesday, August 26, 2020
          , 
          Choctaw County
          , 
          State of Mississippi
          <br />
          <span
            class="c4"
          >
            This report was created on 
            Tuesday, November 3, 2020, 10:22:00 PM UTC
            .
          </span>
        </p>
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <h3>
            Ballots by Voting Method
          </h3>
          <table
            class="c7"
            data-testid="voting-method-table"
          >
            <tbody>
              <tr
                data-testid="absentee"
              >
                <td
                  class=""
                >
                  Absentee
                </td>
                <td
                  class="c8"
                >
                  0
                </td>
              </tr>
              <tr
                data-testid="standard"
              >
                <td
                  class=""
                >
                  Precinct
                </td>
                <td
                  class="c8"
                >
                  8
                </td>
              </tr>
              <tr
                data-testid="total"
              >
                <td
                  class=""
                >
                  <strong>
                    Total Ballots Cast
                  </strong>
                </td>
                <td
                  class="c8"
                >
                  <strong>
                    8
                  </strong>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          class="c9"
        >
          <div
            class="c3"
            data-testid="results-table-775020876"
          >
            <p
              class="c4"
            >
              United States
            </p>
            <h3>
              President
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                8 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="775020876-775031988"
                >
                  <th
                    colspan="3"
                  >
                    Presidential Electors for Joe Biden for President and Kamala Harris for Vice President
                  </th>
                  <td>
                    2
                  </td>
                </tr>
                <tr
                  data-testid="775020876-775031987"
                >
                  <th
                    colspan="3"
                  >
                    Presidential Electors for Donald J. Trump for President and Michael R. Pence for Vice President
                  </th>
                  <td>
                    2
                  </td>
                </tr>
                <tr
                  data-testid="775020876-775031989"
                >
                  <th
                    colspan="3"
                  >
                    Presidential Electors for Phil Collins for President and Bill Parker for Vice President
                  </th>
                  <td>
                    2
                  </td>
                </tr>
                <tr
                  data-testid="775020876-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    2
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c3"
            data-testid="results-table-775020877"
          >
            <p
              class="c4"
            >
              United States
            </p>
            <h3>
              Senate 
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                8 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="775020877-775031985"
                >
                  <th
                    colspan="3"
                  >
                    Mike Espy
                  </th>
                  <td>
                    2
                  </td>
                </tr>
                <tr
                  data-testid="775020877-775031986"
                >
                  <th
                    colspan="3"
                  >
                    Cindy Hyde-Smith
                  </th>
                  <td>
                    2
                  </td>
                </tr>
                <tr
                  data-testid="775020877-775031990"
                >
                  <th
                    colspan="3"
                  >
                    Jimmy Edwards
                  </th>
                  <td>
                    2
                  </td>
                </tr>
                <tr
                  data-testid="775020877-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    2
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c3"
            data-testid="results-table-775020872"
          >
            <p
              class="c4"
            >
              US House Of Representatives
            </p>
            <h3>
              1st Congressional District
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                8 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="775020872-775031978"
                >
                  <th
                    colspan="3"
                  >
                    Antonia Eliason
                  </th>
                  <td>
                    4
                  </td>
                </tr>
                <tr
                  data-testid="775020872-775031979"
                >
                  <th
                    colspan="3"
                  >
                    Trent Kelly
                  </th>
                  <td>
                    2
                  </td>
                </tr>
                <tr
                  data-testid="775020872-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    2
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c3"
            data-testid="results-table-775020870"
          >
            <p
              class="c4"
            >
              Northern District
            </p>
            <h3>
              Supreme Court District 3(Northern) Position 3
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                8 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="775020870-775031976"
                >
                  <th
                    colspan="3"
                  >
                    Josiah Dennis Coleman
                  </th>
                  <td>
                    4
                  </td>
                </tr>
                <tr
                  data-testid="775020870-775031993"
                >
                  <th
                    colspan="3"
                  >
                    Percy L. Lynchard
                  </th>
                  <td>
                    2
                  </td>
                </tr>
                <tr
                  data-testid="775020870-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    2
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="c12"
        >
          <div
            class="c3"
            data-testid="results-table-775020899"
          >
            <p
              class="c4"
            >
              Election Commissioner 01
            </p>
            <h3>
              Election Commissioner  01
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                0 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="775020899-775032015"
                >
                  <th
                    colspan="3"
                  >
                    Glynda Chaney Fulce
                  </th>
                  <td />
                </tr>
                <tr
                  data-testid="775020899-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="c12"
        >
          <div
            class="c3"
            data-testid="results-table-775020900"
          >
            <p
              class="c4"
            >
              Election Commissioner 02
            </p>
            <h3>
              Election Commissioner 02
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                0 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="775020900-775032016"
                >
                  <th
                    colspan="3"
                  >
                    Charles Beck
                  </th>
                  <td />
                </tr>
                <tr
                  data-testid="775020900-775032017"
                >
                  <th
                    colspan="3"
                  >
                    Sharon Brooks
                  </th>
                  <td />
                </tr>
                <tr
                  data-testid="775020900-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="c12"
        >
          <div
            class="c3"
            data-testid="results-table-775020901"
          >
            <p
              class="c4"
            >
              Election Commissioner 03
            </p>
            <h3>
              Election Commissioner 03
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                0 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="775020901-775032018"
                >
                  <th
                    colspan="3"
                  >
                    Dorothy Anderson
                  </th>
                  <td />
                </tr>
                <tr
                  data-testid="775020901-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="c12"
        >
          <div
            class="c3"
            data-testid="results-table-775020902"
          >
            <p
              class="c4"
            >
              Election Commissioner 04
            </p>
            <h3>
              Election Commissioner 04
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                0 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="775020902-775032019"
                >
                  <th
                    colspan="3"
                  >
                    Willie Mae Guillory
                  </th>
                  <td />
                </tr>
                <tr
                  data-testid="775020902-775032020"
                >
                  <th
                    colspan="3"
                  >
                    Lewis Wright
                  </th>
                  <td />
                </tr>
                <tr
                  data-testid="775020902-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c3"
            data-testid="results-table-775020903"
          >
            <p
              class="c4"
            >
              Election Commissioner 05
            </p>
            <h3>
              Election Commissioner 05
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                8 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="775020903-775032021"
                >
                  <th
                    colspan="3"
                  >
                    Ouida A Loper
                  </th>
                  <td>
                    4
                  </td>
                </tr>
                <tr
                  data-testid="775020903-775032022"
                >
                  <th
                    colspan="3"
                  >
                    Wayne McLeod
                  </th>
                  <td>
                    2
                  </td>
                </tr>
                <tr
                  data-testid="775020903-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    2
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c3"
            data-testid="results-table-775020904"
          >
            <p
              class="c4"
            >
              School Board District 5
            </p>
            <h3>
              School Board 05
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                8 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="775020904-775032023"
                >
                  <th
                    colspan="3"
                  >
                    Michael D Thomas
                  </th>
                  <td>
                    4
                  </td>
                </tr>
                <tr
                  data-testid="775020904-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    4
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c3"
            data-testid="results-table-750000017"
          >
            <p
              class="c4"
            >
              State Of Mississippi
            </p>
            <h3>
              Ballot Measure 2
House Concurrent Resolution No. 47
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                8 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="750000017-yes"
                >
                  <th
                    colspan="3"
                  >
                    Yes
                  </th>
                  <td>
                    4
                  </td>
                </tr>
                <tr
                  data-testid="750000017-no"
                >
                  <th
                    colspan="3"
                  >
                    No
                  </th>
                  <td>
                    4
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c3"
            data-testid="results-table-750000018"
          >
            <p
              class="c4"
            >
              State Of Mississippi
            </p>
            <h3>
              Ballot Measure 3
House Bill 1796 - Flag Referendum
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                8 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="750000018-yes"
                >
                  <th
                    colspan="3"
                  >
                    Yes
                  </th>
                  <td>
                    4
                  </td>
                </tr>
                <tr
                  data-testid="750000018-no"
                >
                  <th
                    colspan="3"
                  >
                    No
                  </th>
                  <td>
                    4
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c3"
            data-testid="results-table-750000015"
          >
            <p
              class="c4"
            >
              State Of Mississippi
            </p>
            <h3>
              Ballot Measure 1
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                8 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="750000015-yes"
                >
                  <th
                    colspan="3"
                  >
                    Yes
                  </th>
                  <td>
                    4
                  </td>
                </tr>
                <tr
                  data-testid="750000015-no"
                >
                  <th
                    colspan="3"
                  >
                    No
                  </th>
                  <td>
                    4
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c3"
            data-testid="results-table-750000016"
          >
            <p
              class="c4"
            >
              State Of Mississippi
            </p>
            <h3>
              Ballot Measure 1
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                8 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="750000016-yes"
                >
                  <th
                    colspan="3"
                  >
                    Yes
                  </th>
                  <td>
                    4
                  </td>
                </tr>
                <tr
                  data-testid="750000016-no"
                >
                  <th
                    colspan="3"
                  >
                    No
                  </th>
                  <td>
                    4
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`L&A (logic and accuracy) flow 2`] = `
.c12 {
  word-break: break-word;
}

.c13 {
  font-weight: 600;
}

.c14 {
  font-weight: 600;
  word-break: break-word;
}

.c6 {
  white-space: nowrap;
}

.c3 {
  max-width: 66ch;
  line-height: 1.2;
}

.c3 h1 {
  margin: 2em 0 1em;
  line-height: 1.1;
  font-size: 1.5em;
}

.c3 h2 {
  margin: 1.5em 0 0.75em;
  font-size: 1.25em;
}

.c3 h3 {
  font-size: 1.17em;
}

.c3 h4 {
  font-size: 1em;
}

.c3 h5 {
  font-size: 0.9em;
}

.c3 h3,
.c3 h4,
.c3 h5,
.c3 p,
.c3 ol,
.c3 ul,
.c3 hr {
  margin-top: 1em;
  margin-bottom: 1em;
}

.c3 h1 + h2 {
  margin-top: -0.75em;
}

.c3 h1 + p,
.c3 h2 + p,
.c3 h1 + ol,
.c3 h2 + ol,
.c3 h1 + ul,
.c3 h2 + ul {
  margin-top: -0.75em;
}

.c3 h3 + p,
.c3 h4 + p,
.c3 h5 + p,
.c3 h3 + ol,
.c3 h4 + ol,
.c3 h5 + ol,
.c3 h3 + ul,
.c3 h4 + ul,
.c3 h5 + ul {
  margin-top: -1em;
}

.c3 > :not(.ignore-prose):first-child {
  margin-top: 0;
}

.c3 > :not(.ignore-prose):last-child {
  margin-bottom: 0;
}

.c3 dl {
  margin: 1em 0;
}

.c3 hr {
  border: 0;
  border-top: 0.1em solid #666666;
}

.c10 {
  max-width: 66ch;
  line-height: 1.2;
}

.c10 h1 {
  margin: 2em 0 1em;
  line-height: 1.1;
  font-size: 1.5em;
}

.c10 h2 {
  margin: 1.5em 0 0.75em;
  font-size: 1.25em;
}

.c10 h3 {
  font-size: 1.17em;
}

.c10 h4 {
  font-size: 1em;
}

.c10 h5 {
  font-size: 0.9em;
}

.c10 h3,
.c10 h4,
.c10 h5,
.c10 p,
.c10 ol,
.c10 ul,
.c10 hr {
  margin-top: 0;
  margin-bottom: 0;
}

.c10 h1 + h2 {
  margin-top: -0.75em;
}

.c10 h1 + p,
.c10 h2 + p,
.c10 h1 + ol,
.c10 h2 + ol,
.c10 h1 + ul,
.c10 h2 + ul {
  margin-top: -0.75em;
}

.c10 h3 + p,
.c10 h4 + p,
.c10 h5 + p,
.c10 h3 + ol,
.c10 h4 + ol,
.c10 h5 + ol,
.c10 h3 + ul,
.c10 h4 + ul,
.c10 h5 + ul {
  margin-top: 0;
}

.c10 > :not(.ignore-prose):first-child {
  margin-top: 0;
}

.c10 > :not(.ignore-prose):last-child {
  margin-bottom: 0;
}

.c10 dl {
  margin: 1em 0;
}

.c10 hr {
  border: 0;
  border-top: 0.1em solid #666666;
}

.c5 > svg {
  display: block;
  width: 100%;
  height: auto;
}

.c0 {
  background: #ffffff;
  line-height: 1;
  font-family: 'Vx Helvetica Neue','Noto Emoji','Helvetica Neue',sans-serif;
  font-size: 16px;
  page-break-after: always;
}

.c2 {
  max-width: 1in;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 0.2em solid #000000;
}

.c1 > .seal {
  margin: 0.25em 0;
  width: 1in;
}

.c1 h2 {
  margin-bottom: 0;
}

.c1 h3 {
  margin-top: 0;
}

.c1 > .ballot-header-content {
  -webkit-flex: 4;
  -ms-flex: 4;
  flex: 4;
  margin: 0 1em;
  max-width: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 3;
  -ms-flex: 3;
  flex: 3;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  border: 0.2em solid #000000;
  border-bottom: 0;
  max-width: 50%;
  padding: 0.25em;
}

.c4 > div:first-child {
  margin-right: 0.25em;
  width: 1.1in;
}

.c4 > div:last-child {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4 > div:last-child > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-size: 0.8em;
}

.c4 > div:last-child > div > div {
  margin-bottom: 0.9375em;
}

.c4 > div:last-child > div > div:last-child {
  margin-bottom: 0;
}

.c4 > div:last-child > div strong {
  font-size: 1.25em;
  word-break: break-word;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c8 {
  -webkit-columns: 2;
  columns: 2;
  -webkit-column-gap: 2em;
  column-gap: 2em;
}

.c9 {
  border-bottom: 0.01em solid #000000;
  padding: 0.5em 0;
  -webkit-break-inside: avoid;
  break-inside: avoid;
  page-break-inside: avoid;
}

.c11 > h3 {
  font-size: 0.875em;
  font-weight: 400;
}

@media print {

}

@media print {

}

@media print {

}

@media print {

}

@media print {

}

@media screen {
  .c0 {
    display: none;
  }
}

@media print {

}

@media print {

}

@media (min-width:480px) {

}

@media print {

}

@media (min-width:480px) {

}

@media print {

}

@media print {

}

@media (min-width:1024px) {

}

@media (min-width:1440px) {

}

@media print {

}

@media print {

}

@media print {

}

<div>
  <div
    aria-hidden="true"
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="seal"
        data-testid="printed-ballot-seal"
        id="printedBallotSealContainer"
      >
        <img
          alt=""
          class="c2"
          data-testid="printed-ballot-seal-image"
          src="/seals/Seal_of_Mississippi_BW.svg"
        />
      </div>
      <div
        class="c3 ballot-header-content"
      >
        <h2>
          Unofficial TEST Ballot
        </h2>
        <h3>
          
           
          Mock General Election Choctaw 2020
        </h3>
        <p>
          August 26, 2020
          <br />
          Choctaw County
          , 
          State of Mississippi
        </p>
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <svg
            height="128"
            shape-rendering="crispEdges"
            viewBox="0 0 21 21"
            width="128"
          >
            <path
              d="M0,0 h21v21H0z"
              fill="#FFFFFF"
            />
            <path
              d="M0 0h7v1H0zM9 0h1v1H9zM14,0 h7v1H14zM0 1h1v1H0zM6 1h1v1H6zM10 1h2v1H10zM14 1h1v1H14zM20,1 h1v1H20zM0 2h1v1H0zM2 2h3v1H2zM6 2h1v1H6zM8 2h5v1H8zM14 2h1v1H14zM16 2h3v1H16zM20,2 h1v1H20zM0 3h1v1H0zM2 3h3v1H2zM6 3h1v1H6zM8 3h3v1H8zM12 3h1v1H12zM14 3h1v1H14zM16 3h3v1H16zM20,3 h1v1H20zM0 4h1v1H0zM2 4h3v1H2zM6 4h1v1H6zM9 4h3v1H9zM14 4h1v1H14zM16 4h3v1H16zM20,4 h1v1H20zM0 5h1v1H0zM6 5h1v1H6zM9 5h1v1H9zM11 5h2v1H11zM14 5h1v1H14zM20,5 h1v1H20zM0 6h7v1H0zM8 6h1v1H8zM10 6h1v1H10zM12 6h1v1H12zM14,6 h7v1H14zM3 8h2v1H3zM6 8h2v1H6zM12 8h1v1H12zM17 8h2v1H17zM0 9h2v1H0zM5 9h1v1H5zM7 9h2v1H7zM11 9h2v1H11zM15 9h3v1H15zM19,9 h2v1H19zM0 10h2v1H0zM5 10h4v1H5zM12 10h4v1H12zM17 10h1v1H17zM20,10 h1v1H20zM1 11h1v1H1zM3 11h2v1H3zM8 11h4v1H8zM15 11h2v1H15zM19 11h1v1H19zM0 12h1v1H0zM2 12h2v1H2zM6 12h1v1H6zM8 12h1v1H8zM14,12 h7v1H14zM8 13h2v1H8zM13 13h1v1H13zM18,13 h3v1H18zM0 14h7v1H0zM8 14h3v1H8zM13 14h2v1H13zM17 14h2v1H17zM20,14 h1v1H20zM0 15h1v1H0zM6 15h1v1H6zM9 15h3v1H9zM13 15h2v1H13zM18 15h1v1H18zM0 16h1v1H0zM2 16h3v1H2zM6 16h1v1H6zM8 16h2v1H8zM11 16h1v1H11zM14 16h1v1H14zM16 16h1v1H16zM18 16h2v1H18zM0 17h1v1H0zM2 17h3v1H2zM6 17h1v1H6zM8 17h2v1H8zM12 17h1v1H12zM15 17h2v1H15zM0 18h1v1H0zM2 18h3v1H2zM6 18h1v1H6zM9 18h1v1H9zM11 18h2v1H11zM15 18h3v1H15zM19,18 h2v1H19zM0 19h1v1H0zM6 19h1v1H6zM13 19h1v1H13zM15 19h1v1H15zM17 19h1v1H17zM19,19 h2v1H19zM0 20h7v1H0zM10 20h3v1H10zM14 20h3v1H14zM18 20h2v1H18z"
              fill="#000000"
            />
          </svg>
        </div>
        <div>
          <div>
            <div>
              <div>
                Precinct
              </div>
              <strong>
                District 5
              </strong>
            </div>
            <div>
              <div>
                Ballot Style
              </div>
              <strong>
                5
              </strong>
            </div>
            <div>
              <div>
                Ballot ID
              </div>
              <strong
                class="c6"
              >
                Asdf1234Asdf12
              </strong>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c7"
    >
      <div
        class="c8"
      >
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              President
            </h3>
            <p
              class="c12"
            >
              <span
                class="c13"
              >
                Presidential Electors for Joe Biden for President and Kamala Harris for Vice President
              </span>
               
              / Democrat
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Senate 
            </h3>
            <p
              class="c12"
            >
              <span
                class="c13"
              >
                Mike Espy
              </span>
               
              / Democrat
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              1st Congressional District
            </h3>
            <p
              class="c12"
            >
              <span
                class="c13"
              >
                Antonia Eliason
              </span>
               
              / Democrat
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Supreme Court District 3(Northern) Position 3
            </h3>
            <p
              class="c12"
            >
              <span
                class="c13"
              >
                Josiah Dennis Coleman
              </span>
               
              / Nonpartisan
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Election Commissioner 05
            </h3>
            <p
              class="c12"
            >
              <span
                class="c13"
              >
                Ouida A Loper
              </span>
               
              / Independent
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              School Board 05
            </h3>
            <p
              class="c12"
            >
              <span
                class="c13"
              >
                Michael D Thomas
              </span>
               
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Ballot Measure 2
House Concurrent Resolution No. 47
            </h3>
            <p
              class="c14"
            >
              YES
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Ballot Measure 3
House Bill 1796 - Flag Referendum
            </h3>
            <p
              class="c14"
            >
              YES
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Ballot Measure 1
            </h3>
            <p
              class="c14"
            >
              FOR APPROVAL OF EITHER Initiative No. 65 OR Alternative Measure No. 65 A
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Ballot Measure 1
            </h3>
            <p
              class="c14"
            >
              FOR Initiative Measure No. 65
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="seal"
        data-testid="printed-ballot-seal"
        id="printedBallotSealContainer"
      >
        <img
          alt=""
          class="c2"
          data-testid="printed-ballot-seal-image"
          src="/seals/Seal_of_Mississippi_BW.svg"
        />
      </div>
      <div
        class="c3 ballot-header-content"
      >
        <h2>
          Unofficial TEST Ballot
        </h2>
        <h3>
          
           
          Mock General Election Choctaw 2020
        </h3>
        <p>
          August 26, 2020
          <br />
          Choctaw County
          , 
          State of Mississippi
        </p>
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <svg
            height="128"
            shape-rendering="crispEdges"
            viewBox="0 0 21 21"
            width="128"
          >
            <path
              d="M0,0 h21v21H0z"
              fill="#FFFFFF"
            />
            <path
              d="M0 0h7v1H0zM9 0h1v1H9zM14,0 h7v1H14zM0 1h1v1H0zM6 1h1v1H6zM10 1h2v1H10zM14 1h1v1H14zM20,1 h1v1H20zM0 2h1v1H0zM2 2h3v1H2zM6 2h1v1H6zM8 2h5v1H8zM14 2h1v1H14zM16 2h3v1H16zM20,2 h1v1H20zM0 3h1v1H0zM2 3h3v1H2zM6 3h1v1H6zM8 3h3v1H8zM12 3h1v1H12zM14 3h1v1H14zM16 3h3v1H16zM20,3 h1v1H20zM0 4h1v1H0zM2 4h3v1H2zM6 4h1v1H6zM9 4h3v1H9zM14 4h1v1H14zM16 4h3v1H16zM20,4 h1v1H20zM0 5h1v1H0zM6 5h1v1H6zM9 5h1v1H9zM11 5h2v1H11zM14 5h1v1H14zM20,5 h1v1H20zM0 6h7v1H0zM8 6h1v1H8zM10 6h1v1H10zM12 6h1v1H12zM14,6 h7v1H14zM3 8h2v1H3zM6 8h2v1H6zM12 8h1v1H12zM17 8h2v1H17zM0 9h2v1H0zM5 9h1v1H5zM7 9h2v1H7zM11 9h2v1H11zM15 9h3v1H15zM19,9 h2v1H19zM0 10h2v1H0zM5 10h4v1H5zM12 10h4v1H12zM17 10h1v1H17zM20,10 h1v1H20zM1 11h1v1H1zM3 11h2v1H3zM8 11h4v1H8zM15 11h2v1H15zM19 11h1v1H19zM0 12h1v1H0zM2 12h2v1H2zM6 12h1v1H6zM8 12h1v1H8zM14,12 h7v1H14zM8 13h2v1H8zM13 13h1v1H13zM18,13 h3v1H18zM0 14h7v1H0zM8 14h3v1H8zM13 14h2v1H13zM17 14h2v1H17zM20,14 h1v1H20zM0 15h1v1H0zM6 15h1v1H6zM9 15h3v1H9zM13 15h2v1H13zM18 15h1v1H18zM0 16h1v1H0zM2 16h3v1H2zM6 16h1v1H6zM8 16h2v1H8zM11 16h1v1H11zM14 16h1v1H14zM16 16h1v1H16zM18 16h2v1H18zM0 17h1v1H0zM2 17h3v1H2zM6 17h1v1H6zM8 17h2v1H8zM12 17h1v1H12zM15 17h2v1H15zM0 18h1v1H0zM2 18h3v1H2zM6 18h1v1H6zM9 18h1v1H9zM11 18h2v1H11zM15 18h3v1H15zM19,18 h2v1H19zM0 19h1v1H0zM6 19h1v1H6zM13 19h1v1H13zM15 19h1v1H15zM17 19h1v1H17zM19,19 h2v1H19zM0 20h7v1H0zM10 20h3v1H10zM14 20h3v1H14zM18 20h2v1H18z"
              fill="#000000"
            />
          </svg>
        </div>
        <div>
          <div>
            <div>
              <div>
                Precinct
              </div>
              <strong>
                District 5
              </strong>
            </div>
            <div>
              <div>
                Ballot Style
              </div>
              <strong>
                5
              </strong>
            </div>
            <div>
              <div>
                Ballot ID
              </div>
              <strong
                class="c6"
              >
                Asdf1234Asdf12
              </strong>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c7"
    >
      <div
        class="c8"
      >
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              President
            </h3>
            <p
              class="c12"
            >
              <span
                class="c13"
              >
                Presidential Electors for Donald J. Trump for President and Michael R. Pence for Vice President
              </span>
               
              / Republican
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Senate 
            </h3>
            <p
              class="c12"
            >
              <span
                class="c13"
              >
                Cindy Hyde-Smith
              </span>
               
              / Republican
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              1st Congressional District
            </h3>
            <p
              class="c12"
            >
              <span
                class="c13"
              >
                Trent Kelly
              </span>
               
              / Republican
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Supreme Court District 3(Northern) Position 3
            </h3>
            <p
              class="c12"
            >
              <span
                class="c13"
              >
                Percy L. Lynchard
              </span>
               
              / Nonpartisan
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Election Commissioner 05
            </h3>
            <p
              class="c12"
            >
              <span
                class="c13"
              >
                Wayne McLeod
              </span>
               
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              School Board 05
            </h3>
            <p
              class="c12"
            >
              <span
                class="c13"
              >
                WRITE-IN
              </span>
               
              (write-in)
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Ballot Measure 2
House Concurrent Resolution No. 47
            </h3>
            <p
              class="c14"
            >
              NO
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Ballot Measure 3
House Bill 1796 - Flag Referendum
            </h3>
            <p
              class="c14"
            >
              NO
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Ballot Measure 1
            </h3>
            <p
              class="c14"
            >
              AGAINST BOTH Initiative Measure No. 65 AND Alternative Measure No. 65 A
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Ballot Measure 1
            </h3>
            <p
              class="c14"
            >
              FOR Alternative Measure 65 A
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="seal"
        data-testid="printed-ballot-seal"
        id="printedBallotSealContainer"
      >
        <img
          alt=""
          class="c2"
          data-testid="printed-ballot-seal-image"
          src="/seals/Seal_of_Mississippi_BW.svg"
        />
      </div>
      <div
        class="c3 ballot-header-content"
      >
        <h2>
          Unofficial TEST Ballot
        </h2>
        <h3>
          
           
          Mock General Election Choctaw 2020
        </h3>
        <p>
          August 26, 2020
          <br />
          Choctaw County
          , 
          State of Mississippi
        </p>
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <svg
            height="128"
            shape-rendering="crispEdges"
            viewBox="0 0 21 21"
            width="128"
          >
            <path
              d="M0,0 h21v21H0z"
              fill="#FFFFFF"
            />
            <path
              d="M0 0h7v1H0zM9 0h1v1H9zM14,0 h7v1H14zM0 1h1v1H0zM6 1h1v1H6zM10 1h2v1H10zM14 1h1v1H14zM20,1 h1v1H20zM0 2h1v1H0zM2 2h3v1H2zM6 2h1v1H6zM8 2h5v1H8zM14 2h1v1H14zM16 2h3v1H16zM20,2 h1v1H20zM0 3h1v1H0zM2 3h3v1H2zM6 3h1v1H6zM8 3h3v1H8zM12 3h1v1H12zM14 3h1v1H14zM16 3h3v1H16zM20,3 h1v1H20zM0 4h1v1H0zM2 4h3v1H2zM6 4h1v1H6zM9 4h3v1H9zM14 4h1v1H14zM16 4h3v1H16zM20,4 h1v1H20zM0 5h1v1H0zM6 5h1v1H6zM9 5h1v1H9zM11 5h2v1H11zM14 5h1v1H14zM20,5 h1v1H20zM0 6h7v1H0zM8 6h1v1H8zM10 6h1v1H10zM12 6h1v1H12zM14,6 h7v1H14zM3 8h2v1H3zM6 8h2v1H6zM12 8h1v1H12zM17 8h2v1H17zM0 9h2v1H0zM5 9h1v1H5zM7 9h2v1H7zM11 9h2v1H11zM15 9h3v1H15zM19,9 h2v1H19zM0 10h2v1H0zM5 10h4v1H5zM12 10h4v1H12zM17 10h1v1H17zM20,10 h1v1H20zM1 11h1v1H1zM3 11h2v1H3zM8 11h4v1H8zM15 11h2v1H15zM19 11h1v1H19zM0 12h1v1H0zM2 12h2v1H2zM6 12h1v1H6zM8 12h1v1H8zM14,12 h7v1H14zM8 13h2v1H8zM13 13h1v1H13zM18,13 h3v1H18zM0 14h7v1H0zM8 14h3v1H8zM13 14h2v1H13zM17 14h2v1H17zM20,14 h1v1H20zM0 15h1v1H0zM6 15h1v1H6zM9 15h3v1H9zM13 15h2v1H13zM18 15h1v1H18zM0 16h1v1H0zM2 16h3v1H2zM6 16h1v1H6zM8 16h2v1H8zM11 16h1v1H11zM14 16h1v1H14zM16 16h1v1H16zM18 16h2v1H18zM0 17h1v1H0zM2 17h3v1H2zM6 17h1v1H6zM8 17h2v1H8zM12 17h1v1H12zM15 17h2v1H15zM0 18h1v1H0zM2 18h3v1H2zM6 18h1v1H6zM9 18h1v1H9zM11 18h2v1H11zM15 18h3v1H15zM19,18 h2v1H19zM0 19h1v1H0zM6 19h1v1H6zM13 19h1v1H13zM15 19h1v1H15zM17 19h1v1H17zM19,19 h2v1H19zM0 20h7v1H0zM10 20h3v1H10zM14 20h3v1H14zM18 20h2v1H18z"
              fill="#000000"
            />
          </svg>
        </div>
        <div>
          <div>
            <div>
              <div>
                Precinct
              </div>
              <strong>
                District 5
              </strong>
            </div>
            <div>
              <div>
                Ballot Style
              </div>
              <strong>
                5
              </strong>
            </div>
            <div>
              <div>
                Ballot ID
              </div>
              <strong
                class="c6"
              >
                Asdf1234Asdf12
              </strong>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c7"
    >
      <div
        class="c8"
      >
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              President
            </h3>
            <p
              class="c12"
            >
              <span
                class="c13"
              >
                Presidential Electors for Phil Collins for President and Bill Parker for Vice President
              </span>
               
              / Independent
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Senate 
            </h3>
            <p
              class="c12"
            >
              <span
                class="c13"
              >
                Jimmy Edwards
              </span>
               
              / Libertarian
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              1st Congressional District
            </h3>
            <p
              class="c12"
            >
              <span
                class="c13"
              >
                WRITE-IN
              </span>
               
              (write-in)
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Supreme Court District 3(Northern) Position 3
            </h3>
            <p
              class="c12"
            >
              <span
                class="c13"
              >
                WRITE-IN
              </span>
               
              (write-in)
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Election Commissioner 05
            </h3>
            <p
              class="c12"
            >
              <span
                class="c13"
              >
                WRITE-IN
              </span>
               
              (write-in)
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              School Board 05
            </h3>
            <p
              class="c12"
            >
              <span
                class="c13"
              >
                Michael D Thomas
              </span>
               
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Ballot Measure 2
House Concurrent Resolution No. 47
            </h3>
            <p
              class="c14"
            >
              YES
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Ballot Measure 3
House Bill 1796 - Flag Referendum
            </h3>
            <p
              class="c14"
            >
              YES
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Ballot Measure 1
            </h3>
            <p
              class="c14"
            >
              FOR APPROVAL OF EITHER Initiative No. 65 OR Alternative Measure No. 65 A
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Ballot Measure 1
            </h3>
            <p
              class="c14"
            >
              FOR Initiative Measure No. 65
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="seal"
        data-testid="printed-ballot-seal"
        id="printedBallotSealContainer"
      >
        <img
          alt=""
          class="c2"
          data-testid="printed-ballot-seal-image"
          src="/seals/Seal_of_Mississippi_BW.svg"
        />
      </div>
      <div
        class="c3 ballot-header-content"
      >
        <h2>
          Unofficial TEST Ballot
        </h2>
        <h3>
          
           
          Mock General Election Choctaw 2020
        </h3>
        <p>
          August 26, 2020
          <br />
          Choctaw County
          , 
          State of Mississippi
        </p>
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <svg
            height="128"
            shape-rendering="crispEdges"
            viewBox="0 0 21 21"
            width="128"
          >
            <path
              d="M0,0 h21v21H0z"
              fill="#FFFFFF"
            />
            <path
              d="M0 0h7v1H0zM9 0h1v1H9zM14,0 h7v1H14zM0 1h1v1H0zM6 1h1v1H6zM10 1h2v1H10zM14 1h1v1H14zM20,1 h1v1H20zM0 2h1v1H0zM2 2h3v1H2zM6 2h1v1H6zM8 2h5v1H8zM14 2h1v1H14zM16 2h3v1H16zM20,2 h1v1H20zM0 3h1v1H0zM2 3h3v1H2zM6 3h1v1H6zM8 3h3v1H8zM12 3h1v1H12zM14 3h1v1H14zM16 3h3v1H16zM20,3 h1v1H20zM0 4h1v1H0zM2 4h3v1H2zM6 4h1v1H6zM9 4h3v1H9zM14 4h1v1H14zM16 4h3v1H16zM20,4 h1v1H20zM0 5h1v1H0zM6 5h1v1H6zM9 5h1v1H9zM11 5h2v1H11zM14 5h1v1H14zM20,5 h1v1H20zM0 6h7v1H0zM8 6h1v1H8zM10 6h1v1H10zM12 6h1v1H12zM14,6 h7v1H14zM3 8h2v1H3zM6 8h2v1H6zM12 8h1v1H12zM17 8h2v1H17zM0 9h2v1H0zM5 9h1v1H5zM7 9h2v1H7zM11 9h2v1H11zM15 9h3v1H15zM19,9 h2v1H19zM0 10h2v1H0zM5 10h4v1H5zM12 10h4v1H12zM17 10h1v1H17zM20,10 h1v1H20zM1 11h1v1H1zM3 11h2v1H3zM8 11h4v1H8zM15 11h2v1H15zM19 11h1v1H19zM0 12h1v1H0zM2 12h2v1H2zM6 12h1v1H6zM8 12h1v1H8zM14,12 h7v1H14zM8 13h2v1H8zM13 13h1v1H13zM18,13 h3v1H18zM0 14h7v1H0zM8 14h3v1H8zM13 14h2v1H13zM17 14h2v1H17zM20,14 h1v1H20zM0 15h1v1H0zM6 15h1v1H6zM9 15h3v1H9zM13 15h2v1H13zM18 15h1v1H18zM0 16h1v1H0zM2 16h3v1H2zM6 16h1v1H6zM8 16h2v1H8zM11 16h1v1H11zM14 16h1v1H14zM16 16h1v1H16zM18 16h2v1H18zM0 17h1v1H0zM2 17h3v1H2zM6 17h1v1H6zM8 17h2v1H8zM12 17h1v1H12zM15 17h2v1H15zM0 18h1v1H0zM2 18h3v1H2zM6 18h1v1H6zM9 18h1v1H9zM11 18h2v1H11zM15 18h3v1H15zM19,18 h2v1H19zM0 19h1v1H0zM6 19h1v1H6zM13 19h1v1H13zM15 19h1v1H15zM17 19h1v1H17zM19,19 h2v1H19zM0 20h7v1H0zM10 20h3v1H10zM14 20h3v1H14zM18 20h2v1H18z"
              fill="#000000"
            />
          </svg>
        </div>
        <div>
          <div>
            <div>
              <div>
                Precinct
              </div>
              <strong>
                District 5
              </strong>
            </div>
            <div>
              <div>
                Ballot Style
              </div>
              <strong>
                5
              </strong>
            </div>
            <div>
              <div>
                Ballot ID
              </div>
              <strong
                class="c6"
              >
                Asdf1234Asdf12
              </strong>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c7"
    >
      <div
        class="c8"
      >
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              President
            </h3>
            <p
              class="c12"
            >
              <span
                class="c13"
              >
                WRITE-IN
              </span>
               
              (write-in)
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Senate 
            </h3>
            <p
              class="c12"
            >
              <span
                class="c13"
              >
                WRITE-IN
              </span>
               
              (write-in)
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              1st Congressional District
            </h3>
            <p
              class="c12"
            >
              <span
                class="c13"
              >
                Antonia Eliason
              </span>
               
              / Democrat
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Supreme Court District 3(Northern) Position 3
            </h3>
            <p
              class="c12"
            >
              <span
                class="c13"
              >
                Josiah Dennis Coleman
              </span>
               
              / Nonpartisan
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Election Commissioner 05
            </h3>
            <p
              class="c12"
            >
              <span
                class="c13"
              >
                Ouida A Loper
              </span>
               
              / Independent
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              School Board 05
            </h3>
            <p
              class="c12"
            >
              <span
                class="c13"
              >
                WRITE-IN
              </span>
               
              (write-in)
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Ballot Measure 2
House Concurrent Resolution No. 47
            </h3>
            <p
              class="c14"
            >
              NO
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Ballot Measure 3
House Bill 1796 - Flag Referendum
            </h3>
            <p
              class="c14"
            >
              NO
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Ballot Measure 1
            </h3>
            <p
              class="c14"
            >
              AGAINST BOTH Initiative Measure No. 65 AND Alternative Measure No. 65 A
            </p>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <h3>
              Ballot Measure 1
            </h3>
            <p
              class="c14"
            >
              FOR Alternative Measure 65 A
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`L&A (logic and accuracy) flow 3`] = `
@media print {

}

@media print {

}

@media print {

}

@media print {

}

@media print {

}

@media screen {

}

@media print {

}

@media print {

}

@media (min-width:480px) {

}

@media print {

}

@media (min-width:480px) {

}

@media print {

}

@media print {

}

@media (min-width:1024px) {

}

@media (min-width:1440px) {

}

@media print {

}

@media print {

}

@media print {

}

<div>
  <div>
    <h1>
      Mocked HMPB
    </h1>
    <p>
      Election: 
      Mock General Election Choctaw 2020
    </p>
    <p>
      Ballot Style: 
      5
    </p>
    <p>
      Precinct: 
      District 5
    </p>
    <p>
      Absentee: 
      false
    </p>
    <p>
      Ballot Mode: 
      test
    </p>
  </div>
  <div>
    <h1>
      Mocked HMPB
    </h1>
    <p>
      Election: 
      Mock General Election Choctaw 2020
    </p>
    <p>
      Ballot Style: 
      5
    </p>
    <p>
      Precinct: 
      District 5
    </p>
    <p>
      Absentee: 
      false
    </p>
    <p>
      Ballot Mode: 
      test
    </p>
  </div>
  <div>
    <h1>
      Mocked HMPB
    </h1>
    <p>
      Election: 
      Mock General Election Choctaw 2020
    </p>
    <p>
      Ballot Style: 
      5
    </p>
    <p>
      Precinct: 
      District 5
    </p>
    <p>
      Absentee: 
      false
    </p>
    <p>
      Ballot Mode: 
      test
    </p>
  </div>
  <div>
    <h1>
      Mocked HMPB
    </h1>
    <p>
      Election: 
      Mock General Election Choctaw 2020
    </p>
    <p>
      Ballot Style: 
      5
    </p>
    <p>
      Precinct: 
      District 5
    </p>
    <p>
      Absentee: 
      false
    </p>
    <p>
      Ballot Mode: 
      test
    </p>
  </div>
  <div>
    <h1>
      Mocked HMPB
    </h1>
    <p>
      Election: 
      Mock General Election Choctaw 2020
    </p>
    <p>
      Ballot Style: 
      5
    </p>
    <p>
      Precinct: 
      District 5
    </p>
    <p>
      Absentee: 
      false
    </p>
    <p>
      Ballot Mode: 
      test
    </p>
  </div>
  <div>
    <h1>
      Mocked HMPB
    </h1>
    <p>
      Election: 
      Mock General Election Choctaw 2020
    </p>
    <p>
      Ballot Style: 
      5
    </p>
    <p>
      Precinct: 
      District 5
    </p>
    <p>
      Absentee: 
      false
    </p>
    <p>
      Ballot Mode: 
      test
    </p>
  </div>
  <div>
    <h1>
      Mocked HMPB
    </h1>
    <p>
      Election: 
      Mock General Election Choctaw 2020
    </p>
    <p>
      Ballot Style: 
      5
    </p>
    <p>
      Precinct: 
      District 5
    </p>
    <p>
      Absentee: 
      false
    </p>
    <p>
      Ballot Mode: 
      test
    </p>
  </div>
</div>
`;

exports[`tabulating CVRs 1`] = `
.c4 {
  font-size: 0.8em;
}

.c10 {
  white-space: nowrap;
}

.c3 {
  line-height: 1.2;
}

.c3 h1 {
  margin: 2em 0 1em;
  line-height: 1.1;
  font-size: 1.5em;
}

.c3 h2 {
  margin: 1.5em 0 0.75em;
  font-size: 1.25em;
}

.c3 h3 {
  font-size: 1.17em;
}

.c3 h4 {
  font-size: 1em;
}

.c3 h5 {
  font-size: 0.9em;
}

.c3 h3,
.c3 h4,
.c3 h5,
.c3 p,
.c3 ol,
.c3 ul,
.c3 hr {
  margin-top: 1em;
  margin-bottom: 1em;
}

.c3 h1 + h2 {
  margin-top: -0.75em;
}

.c3 h1 + p,
.c3 h2 + p,
.c3 h1 + ol,
.c3 h2 + ol,
.c3 h1 + ul,
.c3 h2 + ul {
  margin-top: -0.75em;
}

.c3 h3 + p,
.c3 h4 + p,
.c3 h5 + p,
.c3 h3 + ol,
.c3 h4 + ol,
.c3 h5 + ol,
.c3 h3 + ul,
.c3 h4 + ul,
.c3 h5 + ul {
  margin-top: -1em;
}

.c3 > :not(.ignore-prose):first-child {
  margin-top: 0;
}

.c3 > :not(.ignore-prose):last-child {
  margin-bottom: 0;
}

.c3 dl {
  margin: 1em 0;
}

.c3 hr {
  border: 0;
  border-top: 0.1em solid #666666;
}

.c7 {
  border-color: rgb(194,200,203);
  width: 100%;
  border-collapse: collapse;
  text-align: left;
}

.c7 th,
.c7 td {
  border-bottom: 1px solid rgb(194,200,203);
  padding: 0.25rem 0.5rem;
}

.c7 th {
  border-top: 1px solid rgb(194,200,203);
  font-size: 0.75rem;
}

.c8 {
  text-align: right;
}

.c9 {
  margin: 1rem 0;
  page-break-inside: avoid;
}

.c9 p:first-child {
  margin-bottom: 0;
}

.c9 h3 {
  margin-top: 0;
  margin-bottom: 0.5em;
}

.c9 h3 + p {
  margin-top: -0.8em;
  margin-bottom: 0.25em;
}

.c9 h3 + table {
  margin-top: -0.5em;
}

.c11 {
  width: 100%;
  height: 1px;
  border-collapse: collapse;
}

.c11 tr {
  border-top: 1px solid rgb(194,200,203);
  border-bottom: 1px solid rgb(194,200,203);
  height: 100%;
}

.c11 tr.metadata {
  font-size: 0.75em;
}

.c11 tr.metadata.metadatarow {
  border-bottom: 1px solid #e6e6e6;
}

.c11 td {
  width: 1%;
  height: 100%;
  padding: 0.1rem 0.25rem;
  padding-right: 0;
  text-align: right;
  white-space: no-wrap;
}

.c11 th {
  padding: 0 0.5rem;
  text-align: right;
  font-weight: 400;
}

.c11 th:first-child {
  padding-left: 0.1rem;
  text-align: left;
}

.c11 th:not(:first-child) {
  padding-right: 0;
}

.c2 {
  float: right;
  margin: 0 0 1em 2em;
  height: 0.25in;
}

.c1 {
  page-break-before: always;
}

.c5 {
  -webkit-columns: 3;
  columns: 3;
  -webkit-column-gap: 0.3in;
  column-gap: 0.3in;
  margin-top: 1rem;
}

.c5 > div {
  margin-top: 0;
}

.c0 {
  font-size: 12px;
}

.c6 {
  margin-bottom: 1em;
  border: 1px solid rgb(194,200,203);
  border-width: 0 1px;
  -webkit-break-inside: avoid;
  break-inside: avoid;
}

.c6 h3 {
  margin: 0;
  background: rgb(194,200,203);
  padding: 0.25rem 0.5rem;
}

@media print {

}

@media print {

}

@media print {

}

@media (min-width:480px) {

}

@media print {
  .c7 {
    border-top: 1px solid rgb(194,200,203);
  }
}

@media print {

}

@media (min-width:480px) {

}

@media print {

}

@media (min-width:480px) {

}

@media print {

}

@media print {
  .c0 {
    font-size: 12px;
  }
}

@media print {

}

@media print {

}

@media print {

}

<div>
  <div
    class="c0"
  >
    <section
      class="c1"
      data-testid="election-full-tally-report"
    >
      <img
        alt="VotingWorks logo"
        class="c2"
        src="/votingworks-wordmark-black.svg"
      />
      <div
        class="c3"
      >
        <h1>
          Official
           
          Mock General Election Choctaw 2020
           Tally Report
        </h1>
        <p>
          Wednesday, August 26, 2020
          , 
          Choctaw County
          , 
          State of Mississippi
          <br />
          <span
            class="c4"
          >
            This report was created on 
            Tuesday, November 3, 2020, 10:22:00 PM UTC
            .
          </span>
        </p>
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <h3>
            Ballots by Voting Method
          </h3>
          <table
            class="c7"
            data-testid="voting-method-table"
          >
            <tbody>
              <tr
                data-testid="absentee"
              >
                <td
                  class=""
                >
                  Absentee
                </td>
                <td
                  class="c8"
                >
                  50
                </td>
              </tr>
              <tr
                data-testid="standard"
              >
                <td
                  class=""
                >
                  Precinct
                </td>
                <td
                  class="c8"
                >
                  50
                </td>
              </tr>
              <tr
                data-testid="total"
              >
                <td
                  class=""
                >
                  <strong>
                    Total Ballots Cast
                  </strong>
                </td>
                <td
                  class="c8"
                >
                  <strong>
                    100
                  </strong>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          class="c9"
        >
          <div
            class="c3"
            data-testid="results-table-775020876"
          >
            <p
              class="c4"
            >
              United States
            </p>
            <h3>
              President
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                100 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                1 overvote
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                7 undervotes
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="775020876-775031988"
                >
                  <th
                    colspan="3"
                  >
                    Presidential Electors for Joe Biden for President and Kamala Harris for Vice President
                  </th>
                  <td>
                    27
                  </td>
                </tr>
                <tr
                  data-testid="775020876-775031987"
                >
                  <th
                    colspan="3"
                  >
                    Presidential Electors for Donald J. Trump for President and Michael R. Pence for Vice President
                  </th>
                  <td>
                    36
                  </td>
                </tr>
                <tr
                  data-testid="775020876-775031989"
                >
                  <th
                    colspan="3"
                  >
                    Presidential Electors for Phil Collins for President and Bill Parker for Vice President
                  </th>
                  <td>
                    29
                  </td>
                </tr>
                <tr
                  data-testid="775020876-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c3"
            data-testid="results-table-775020877"
          >
            <p
              class="c4"
            >
              United States
            </p>
            <h3>
              Senate 
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                100 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                4 overvotes
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                4 undervotes
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="775020877-775031985"
                >
                  <th
                    colspan="3"
                  >
                    Mike Espy
                  </th>
                  <td>
                    29
                  </td>
                </tr>
                <tr
                  data-testid="775020877-775031986"
                >
                  <th
                    colspan="3"
                  >
                    Cindy Hyde-Smith
                  </th>
                  <td>
                    35
                  </td>
                </tr>
                <tr
                  data-testid="775020877-775031990"
                >
                  <th
                    colspan="3"
                  >
                    Jimmy Edwards
                  </th>
                  <td>
                    28
                  </td>
                </tr>
                <tr
                  data-testid="775020877-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c3"
            data-testid="results-table-775020872"
          >
            <p
              class="c4"
            >
              US House Of Representatives
            </p>
            <h3>
              1st Congressional District
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                100 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                3 overvotes
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                5 undervotes
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="775020872-775031978"
                >
                  <th
                    colspan="3"
                  >
                    Antonia Eliason
                  </th>
                  <td>
                    46
                  </td>
                </tr>
                <tr
                  data-testid="775020872-775031979"
                >
                  <th
                    colspan="3"
                  >
                    Trent Kelly
                  </th>
                  <td>
                    46
                  </td>
                </tr>
                <tr
                  data-testid="775020872-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c3"
            data-testid="results-table-775020870"
          >
            <p
              class="c4"
            >
              Northern District
            </p>
            <h3>
              Supreme Court District 3(Northern) Position 3
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                100 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                5 undervotes
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="775020870-775031976"
                >
                  <th
                    colspan="3"
                  >
                    Josiah Dennis Coleman
                  </th>
                  <td>
                    37
                  </td>
                </tr>
                <tr
                  data-testid="775020870-775031993"
                >
                  <th
                    colspan="3"
                  >
                    Percy L. Lynchard
                  </th>
                  <td>
                    58
                  </td>
                </tr>
                <tr
                  data-testid="775020870-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c3"
            data-testid="results-table-775020899"
          >
            <p
              class="c4"
            >
              Election Commissioner 01
            </p>
            <h3>
              Election Commissioner  01
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                18 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                1 undervote
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="775020899-775032015"
                >
                  <th
                    colspan="3"
                  >
                    Glynda Chaney Fulce
                  </th>
                  <td>
                    17
                  </td>
                </tr>
                <tr
                  data-testid="775020899-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c3"
            data-testid="results-table-775020900"
          >
            <p
              class="c4"
            >
              Election Commissioner 02
            </p>
            <h3>
              Election Commissioner 02
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                15 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                1 undervote
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="775020900-775032016"
                >
                  <th
                    colspan="3"
                  >
                    Charles Beck
                  </th>
                  <td>
                    5
                  </td>
                </tr>
                <tr
                  data-testid="775020900-775032017"
                >
                  <th
                    colspan="3"
                  >
                    Sharon Brooks
                  </th>
                  <td>
                    9
                  </td>
                </tr>
                <tr
                  data-testid="775020900-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c3"
            data-testid="results-table-775020901"
          >
            <p
              class="c4"
            >
              Election Commissioner 03
            </p>
            <h3>
              Election Commissioner 03
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                23 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                1 undervote
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="775020901-775032018"
                >
                  <th
                    colspan="3"
                  >
                    Dorothy Anderson
                  </th>
                  <td>
                    22
                  </td>
                </tr>
                <tr
                  data-testid="775020901-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c3"
            data-testid="results-table-775020902"
          >
            <p
              class="c4"
            >
              Election Commissioner 04
            </p>
            <h3>
              Election Commissioner 04
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                25 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                1 overvote
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="775020902-775032019"
                >
                  <th
                    colspan="3"
                  >
                    Willie Mae Guillory
                  </th>
                  <td>
                    10
                  </td>
                </tr>
                <tr
                  data-testid="775020902-775032020"
                >
                  <th
                    colspan="3"
                  >
                    Lewis Wright
                  </th>
                  <td>
                    14
                  </td>
                </tr>
                <tr
                  data-testid="775020902-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c3"
            data-testid="results-table-775020903"
          >
            <p
              class="c4"
            >
              Election Commissioner 05
            </p>
            <h3>
              Election Commissioner 05
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                19 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                2 overvotes
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                2 undervotes
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="775020903-775032021"
                >
                  <th
                    colspan="3"
                  >
                    Ouida A Loper
                  </th>
                  <td>
                    9
                  </td>
                </tr>
                <tr
                  data-testid="775020903-775032022"
                >
                  <th
                    colspan="3"
                  >
                    Wayne McLeod
                  </th>
                  <td>
                    6
                  </td>
                </tr>
                <tr
                  data-testid="775020903-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c3"
            data-testid="results-table-775020904"
          >
            <p
              class="c4"
            >
              School Board District 5
            </p>
            <h3>
              School Board 05
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                19 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                0 overvotes
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                0 undervotes
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="775020904-775032023"
                >
                  <th
                    colspan="3"
                  >
                    Michael D Thomas
                  </th>
                  <td>
                    19
                  </td>
                </tr>
                <tr
                  data-testid="775020904-write-in"
                >
                  <th
                    colspan="3"
                  >
                    Write-In
                  </th>
                  <td>
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c3"
            data-testid="results-table-750000017"
          >
            <p
              class="c4"
            >
              State Of Mississippi
            </p>
            <h3>
              Ballot Measure 2
House Concurrent Resolution No. 47
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                100 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                2 overvotes
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                5 undervotes
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="750000017-yes"
                >
                  <th
                    colspan="3"
                  >
                    Yes
                  </th>
                  <td>
                    40
                  </td>
                </tr>
                <tr
                  data-testid="750000017-no"
                >
                  <th
                    colspan="3"
                  >
                    No
                  </th>
                  <td>
                    53
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c3"
            data-testid="results-table-750000018"
          >
            <p
              class="c4"
            >
              State Of Mississippi
            </p>
            <h3>
              Ballot Measure 3
House Bill 1796 - Flag Referendum
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                100 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                3 overvotes
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                2 undervotes
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="750000018-yes"
                >
                  <th
                    colspan="3"
                  >
                    Yes
                  </th>
                  <td>
                    43
                  </td>
                </tr>
                <tr
                  data-testid="750000018-no"
                >
                  <th
                    colspan="3"
                  >
                    No
                  </th>
                  <td>
                    52
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c3"
            data-testid="results-table-750000015"
          >
            <p
              class="c4"
            >
              State Of Mississippi
            </p>
            <h3>
              Ballot Measure 1
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                100 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                3 overvotes
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                4 undervotes
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="750000015-yes"
                >
                  <th
                    colspan="3"
                  >
                    Yes
                  </th>
                  <td>
                    39
                  </td>
                </tr>
                <tr
                  data-testid="750000015-no"
                >
                  <th
                    colspan="3"
                  >
                    No
                  </th>
                  <td>
                    54
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c3"
            data-testid="results-table-750000016"
          >
            <p
              class="c4"
            >
              State Of Mississippi
            </p>
            <h3>
              Ballot Measure 1
            </h3>
            <p
              class="c4"
            >
              <span
                class="c10"
              >
                100 ballots
                 cast /
              </span>
               
              <span
                class="c10"
              >
                 
                4 overvotes
                 /
              </span>
               
              <span
                class="c10"
              >
                 
                6 undervotes
              </span>
            </p>
            <table
              class="c11"
            >
              <tbody>
                <tr
                  data-testid="750000016-yes"
                >
                  <th
                    colspan="3"
                  >
                    Yes
                  </th>
                  <td>
                    40
                  </td>
                </tr>
                <tr
                  data-testid="750000016-no"
                >
                  <th
                    colspan="3"
                  >
                    No
                  </th>
                  <td>
                    50
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;
